Fix z-indexing of admin

--- a/app/src/components/AppAdmin/AppAdmin.module.scss
+++ b/app/src/components/AppAdmin/AppAdmin.module.scss
@@ -1,3 +1,5 @@
+@import 'shared';
+
 .root {
   background-color: rgba(0, 0, 0, 0.8);
   border-radius: 10px 0 0;
@@ -7,6 +9,7 @@
   font-size: 12px;
   position: fixed;
   right: 0;
+  z-index: z('admin');
 
   button {
     background: none;
