--- a/app/src/components/ScreenPreloader/ScreenPreloader.module.scss
+++ b/app/src/components/ScreenPreloader/ScreenPreloader.module.scss
@@ -9,6 +9,7 @@
   position: absolute;
   top: 0;
   width: 100vw;
+  z-index: z('preloader');
 
   .wrapper {
     align-items: center;
