--- a/app/src/styles/shared/variables.scss
+++ b/app/src/styles/shared/variables.scss
@@ -8,3 +8,8 @@ $color-gondola: #060404;
 /// Dimensions ///
 //////////////////
 $design-width-desktop: 1920;
+
+/////////////////
+/// Z-Indexes ///
+/////////////////
+$z-indexes: ('admin', 'preloader');
